[tool.poetry]
name = "project-networking"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
packages = [{include = "project_networking"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
simple-term-menu = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
